# TicTacToe-Robot

./: README.md
DynamixelSDK/dynamixel_sdk_custom_interfaces/: CMakeLists.txt
DynamixelSDK/dynamixel_sdk_custom_interfaces/msg/: JointsPosition.msg
DynamixelSDK/dynamixel_sdk_custom_interfaces/srv/: GetJointsPosition.srv
DynamixelSDK/dynamixel_sdk_examples/: CMakeLists.txt
DynamixelSDK/dynamixel_sdk_examples/include/: joint_controller.hpp
DynamixelSDK/dynamixel_sdk_examples/src/: joint_controller.cpp  read_write_node.cpp
ttt_control/: package.xml  setup.cfg  setup.py
ttt_control/launch/: main_programme.xml
ttt_control/ttt_control/: robot_master.py  ttt_brain_minimax.py
ttt_interfaces/: CMakeLists.txt  package.xml
ttt_interfaces/msg/: Circle.msg  GripperPose.msg  InitialGoalPose.msg  ObjectPose.msg  PlayField.msg  Pose.msg
ttt_kinematics/: package.xml  setup.cfg  setup.py
ttt_kinematics/script/: inverse_test.py
ttt_kinematics/ttt_kinematics/: inverse_kinematics.py  joints_angle_to_data.py  motion_planner.py
ttt_perception/: README.md  package.xml  setup.cfg  setup.py
ttt_perception/script/: camera_config.py  python_test.py
ttt_perception/ttt_perception/: cv2_to_ros2.py  img_to_pos_node.py  play_field_node.py
ttt_perception/videos/: diagrams.odp  test_1.webm  test_2.webm  test_3.webm
