<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ttt_kinematics</name>
  <version>0.0.0</version>
  <description>This package contains nodes to convert between different coordinates system, as well as converting joint angles to relevant data to send to motor</description>
  <maintainer email="lxzraizer@gmail.com">xinzhi</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>dynamixel_sdk_examples</depend>
  <depend>dynamixel_sdk_custom_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
