<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ttt_perception</name>
  <version>0.0.0</version>
  <description>A ROS2 package to take in image data and localise the circular pieces in the playing scene of a tictactoe game</description>
  <maintainer email="lxzraizer@gmail.com">xinzhi</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>opencv2</depend>
  <depend>geometry_msgs</depend> 
  <depend>ttt_interfaces</depend> 
  
  

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
